--- a/notebook-alyien_news.ipynb
+++ b/notebook-alyien_news.ipynb
@@ -9,8 +9,8 @@
     "import aylien_news_api\n",
     "from aylien_news_api.rest import ApiException\n",
     "\n",
-    "aylien_news_api.configuration.api_key['X-AYLIEN-NewsAPI-Application-ID'] = '7015e508'\n",
-    "aylien_news_api.configuration.api_key['X-AYLIEN-NewsAPI-Application-Key'] = 'aeddb1708b26cb12741977dd570ee2f2'\n",
+    "aylien_news_api.configuration.api_key['X-AYLIEN-NewsAPI-Application-ID'] = 'api_key'\n",
+    "aylien_news_api.configuration.api_key['X-AYLIEN-NewsAPI-Application-Key'] = 'application_key'\n",
     "api_instance = aylien_news_api.DefaultApi()"
    ]
   },
